# CIE-Middleware-RPM-Package

./: .gitignore  CMakeLists.txt  Containerfile  README.md  cie-middleware-AbilitaCIE-fix-error-path.patch  cie-middleware-FirmaConCIE-fix-error-path.patch  cie-middleware-FirmaConCIE-make-progress-more-uniform.patch  cie-middleware-PINManager-fix-error-path.patch  cie-middleware-cie-pkcs11-fixup.patch  cie-middleware-cieid-jframe-set-icon-and-title.patch  cie-middleware-cieid-make-window-resizable.patch  cie-middleware-common-fixup.patch  cie-middleware-fix-FirmaConCIE-error-on-multiple-tokens.patch  cie-middleware-fix-c++-std-headers.patch  cie-middleware-fix-chromium-buffer-overflow.patch  cie-middleware-fix-cryptopp.patch  cie-middleware-fix-deallocation-mismatch.patch  cie-middleware-fix-openssl.patch  cie-middleware-fix-pades.patch  cie-middleware-fix-pkcs11-cant-lock.patch  cie-middleware-fix-pkcs11-info-output.patch  cie-middleware-fix-pkcs11.patch  cie-middleware-fix-podofo.patch  cie-middleware-fix-signature-placement.patch  cie-middleware-generate-transparent-signature.patch  cie-middleware-ignore-unrecognised-tokens.patch  cie-middleware-improve-graphical-signature.patch  cie-middleware-keyboard-shortcuts.patch  cie-middleware-merge-fix.patch  cie-middleware-openssl-provider.patch  cie-middleware-override-tutorial.patch  cie-middleware-prevent-crashes.patch  cie-middleware-reduce-verbosity.patch  cie-middleware.spec  cieid.desktop  cieid.sh  pom.xml  public_key.pem  sources
.copr/: Makefile
.github/workflows/: srpm.yaml
